syntax = "proto3";
package dota2;

message Stats {
	uint64 match_id = 1;//比赛ID
	uint32 account_id = 2;//选手的account_id
	uint64 steamid=15;
	string player_name = 3;//选手昵称
	uint32 hero_id = 4;//选手使用的英雄ID
	string hero_name = 5;//选手使用的英雄名称
	uint32 create_total_damages = 6;//对敌方英雄造成的全部伤害
	uint32 create_deadly_damages = 7;//对敌方英雄造成的致死伤害
	float create_total_stiff_control = 8;//对敌方英雄造成的全部硬控（stun+silence+taunt+hex）[单位为秒，保留两位小数]
	float create_deadly_stiff_control = 9;//对敌方英雄造成的致死硬控（stun+silence+taunt+hex）[单位为秒，保留两位小数]
	uint32 opponent_hero_deaths = 10;//敌方英雄死亡总次数
	float create_deadly_damages_per_death = 11;//create_deadly_damages/opponent_hero_deaths[单位为点，保留两位小数]
	float create_deadly_stiff_control_per_death = 12;//create_deadly_stiff_control/opponent_hero_deaths[单位为秒，保留两位小数]
    uint32 aloneKilledNum = 16;//单场比赛单杀敌方英雄数量
	uint32 aloneBeKilledNum = 17;//单场比赛被单杀数量
	int32 aloneBeCatchedNum = 18; //单场比赛被抓次数
	uint32 rGpm = 19;//可靠金钱
	uint32 unrRpm = 20;//不可靠金钱
    uint32 killHeroGold = 21;//打架获取的金钱
    uint32 deadLoseGold = 22;//死亡损失金钱
    uint32 fedEnemyGold = 23;//死亡敌方获取的金钱
    int32 teamNumber = 24; //选手的队伍
	bool isWin = 25; //是否获胜
}